# yari

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  docs.yml  rust-clippy.yml
src/: append.rs  at_least.rs  bin.rs  cli.rs  client.rs  config.rs  election_thread.rs  leader.rs  lib.rs  log.rs  persistence.rs  raft.rs  rpc.rs  server.rs  state_machine.rs  timer.rs  vote.rs
src/eventstream/: mod.rs
src/log/: log_entry.rs
src/raft/: election_thread.rs  followers.rs  roles.rs  servers.rs
src/raft/roles/: candidate.rs  leader.rs
src/rpc/: append.rs  client.rs  vote.rs
src/server/: response.rs
src/state_machine/: in_memory_kv.rs  noop_state_machine.rs  string_append_state_machine.rs
web/: package.json
web/src/: App.tsx  Client.ts  RaftServer.tsx  RaftState.ts  Server.ts  setupProxy.js
yari-bin/: CHANGELOG.md  Cargo.toml
yari-bin/src/: cli.rs  main.rs
yari-lib/: CHANGELOG.md  Cargo.toml
yari-lib/examples/: simple.rs
yari-lib/src/: config.rs  error.rs  lib.rs  log.rs  message_board.rs  persistence.rs  raft.rs  rpc.rs  server.rs  sse_channel.rs
yari-lib/src/eventstream/: mod.rs
yari-lib/src/log/: log_entry.rs  mod.rs
yari-lib/src/raft/: election_thread.rs  followers.rs  message.rs  mod.rs  servers.rs
yari-lib/src/rpc/: append.rs  client.rs  mod.rs  vote.rs
yari-lib/src/server/: mod.rs  response.rs
yari-lib/src/state_machine/: in_memory_kv.rs  mod.rs  noop_state_machine.rs  string_append_state_machine.rs
