[package]
name = "yari"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"

[lib]
name = "yari"
path = "src/lib.rs"

[[bin]]
name = "yari"
path = "src/bin.rs"

[profile.dev]
panic = "abort"

[dependencies]
structopt = "0.3.8"
toml = "0.5.6"
serde = { version = "1.0.104", features = ["derive"] }
rocket = "0.4.2"
rocket_contrib = {version="0.4.2", default-features = false, features = ["json"]}
serde_json = "1.0.45"
rand = "0.7.3"
reqwest = { version = "0.10", features = ["blocking", "json"] }
delegate = "0.4.0"
url = "2.1.1"
url_serde = "0.2.0"
urlencoding = "1.0.0"
human-panic = "1.0.1"
lazy_static = "1.4.0"
bincode = "1.2.1"
