[package]
name = "yari-bin"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"

[dependencies]
structopt = "0.3.17"
toml = "0.5.6"
yari = { path = "../yari-lib" }
async-std = { version = "1.6.3", features = ["attributes"] }
human-panic = "1.0.3"
tide = "0.13.0"
async-macros = "2.0.0"
urlencoding = "1.1.1"
