[package]
name = "yari-cli"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"

[dependencies]
clap = { version = "4.4.8", features = ["derive", "env"] }
clap-verbosity-flag = "2.1.0"
toml = "0.8.8"
yari = { path = "../yari-lib" }
human-panic = "1.2.2"
urlencoding = "2.1.3"
async-global-executor = "2.4.0"
async-lock = "3.1.1"
env_logger = "0.10.1"
log = "0.4.20"
