[package]
name = "yari"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
rand = "0.7.3"
delegate = "0.4.3"
url = "2.1.1"
url_serde = "0.2.0"
urlencoding = "1.1.1"
human-panic = "1.0.3"
lazy_static = "1.4.0"
bincode = "1.3.1"
async-trait = "0.1.40"
env_logger = "0.7.1"
rustls = "0.18.1"
async-std = { version = "1.6.3", features = ["unstable", "attributes"] }
surf = { git = "https://github.com/http-rs/surf", branch = "main" }
async-macros = "2.0.0"
http-client = "4.0.0"
mime_guess = "2.0.3"
broadcaster = { version = "1.0.0", features = ["default-channels", "parking-lot"] }
tide = "0.13.0"
pin-project-lite = "0.1.7"
log = "0.4.11"
toml = "0.5.6"
futures-util = "0.3.5"
