[package]
name = "yari"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"

[dependencies]
async-macros = "2.0.0"
async-trait = "0.1.40"
bincode = "1.3.1"
delegate = "0.4.3"
driftwood = "0.0.3"
env_logger = "0.7.1"
futures-util = "0.3.5"
http-client = "4.0.0"
human-panic = "1.0.3"
lazy_static = "1.4.0"
log = "0.4.11"
mime_guess = "2.0.3"
pin-project-lite = "0.1.7"
rand = "0.7.3"
rustls = "0.18.1"
serde_json = "1.0.57"
tide = "0.13.0"
toml = "0.5.6"
url = "2.1.1"
url_serde = "0.2.0"
urlencoding = "1.1.1"

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

[dependencies.async-std]
version = "1.6.3"
features = ["unstable", "attributes"]

[dependencies.broadcaster]
version = "1.0.0"
features = ["default-channels", "parking-lot"]

[dependencies.surf]
git = "https://github.com/http-rs/surf"
branch = "main"
features = ["h1-client"]
