[package]
name = "yari"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2021"
description = "yet another raft implementation"

[dependencies]
async-broadcast = "0.6.0"
async-channel = "2.1.0"
async-fs = "2.1.0"
async-global-executor = "2.4.0"
async-io = "2.2.0"
async-lock = "3.1.1"
bincode = "1.3.3"
delegate = "0.12.0"
env_logger = "0.10.1"
fastrand = "2.0.1"
futures-lite = "2.0.1"
human-panic = "1.2.2"
lazy_static = "1.4.0"
log = "0.4.20"
rustls = "0.21.9"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
toml = "0.8.8"
trillium = "0.2.11"
trillium-api = { version = "0.2.0-rc.7", default-features = false }
trillium-client = { version = "0.5.0", features = ["json"] }
trillium-http = "0.3.6"
trillium-logger = "0.4.3"
trillium-redirect = "0.1.0"
trillium-router = "0.3.5"
trillium-server-common = "0.4.5"
trillium-smol = "0.3.1"
unicycle = "0.9.4"
url = "2.5.0"
url_serde = "0.2.0"
urlencoding = "2.1.3"
